Moved projects. Accesibility changes.

--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -24,11 +24,13 @@ const links = [
             >
                 <div class="dark:block hidden">
                     <img
+                        alt="Close navbar dropdown"
                         id="hamburger_open"
                         class="scale-150"
                         src="icons/burger_close_dark.svg"
                     />
                     <img
+                        alt="Open navbar dropdown"
                         id="hamburger_closed"
                         class="scale-150"
                         src="icons/burger_dark.svg"
@@ -36,11 +38,13 @@ const links = [
                 </div>
                 <div class="block dark:hidden">
                     <img
+                        alt="Close navbar dropdown"
                         id="hamburger_open"
                         class="scale-150"
                         src="icons/burger_close.svg"
                     />
                     <img
+                        alt="Open navbar dropdown"
                         id="hamburger_closed"
                         class="scale-150"
                         src="icons/burger.svg"
@@ -77,10 +81,15 @@ const links = [
             >
                 <div class="hidden lg:block scale-150">
                     <img
+                        alt="GitHub icon"
                         class="hidden dark:block"
                         src="icons/github_dark.svg"
                     />
-                    <img class="dark:hidden block" src="icons/github.svg" />
+                    <img
+                        alt="GitHub icon"
+                        class="dark:hidden block"
+                        src="icons/github.svg"
+                    />
                 </div>
                 <span class="uppercase text-lg font-bold tracking-tight"
                     >github</span
