--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -10,15 +10,19 @@ import Navigation from "@components/navigation.astro";
             name="viewport"
             content="height=device-height, 
                       width=device-width, initial-scale=1.0, 
-                      minimum-scale=1.0, maximum-scale=1.0, 
-                      user-scalable=no, target-densitydpi=device-dpi"
+                      minimum-scale=1.0, maximum-scale=1.0"
         />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
             href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
             rel="stylesheet"
-        /><title>Year of Code</title>
+        />
+        <title>Year of Code</title>
+        <meta
+            name="description"
+            content="Calcopod's year of coding summarized in one epic website."
+        />
     </head>
     <body class="dark overflow-x-hidden">
         <Navigation />
