--- a/src/components/theme_switch.astro
+++ b/src/components/theme_switch.astro
@@ -11,11 +11,13 @@
 >
     <div class="dark:hidden">
         <img
+            alt="Toggle dark theme"
             id="theme_toggle_light"
             class="scale-150 h-full p-2"
             src="icons/moon.svg"
         />
         <img
+            alt="Toggle light theme"
             id="theme_toggle_dark"
             class="scale-150 h-full p-2"
             src="icons/moon_dark.svg"
@@ -23,11 +25,13 @@
     </div>
     <div class="hidden dark:block">
         <img
+            alt="Toggle dark theme"
             id="theme_toggle_light"
             class="scale-150 h-full p-2"
             src="icons/sun.svg"
         />
         <img
+            alt="Toggle light theme"
             id="theme_toggle_dark"
             class="scale-150 h-full p-2"
             src="icons/sun_dark.svg"
