--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -18,6 +18,12 @@ import Navigation from "@components/navigation.astro";
             href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
             rel="stylesheet"
         />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap"
+            rel="stylesheet"
+        />
         <title>Year of Code</title>
         <meta
             name="description"
